<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingRight="20dp"
    android:paddingEnd="20dp"
    android:paddingLeft="20dp"
    android:paddingStart="20dp"
    android:background="@color/transparent">
    <!--android:background="@drawable/trail_bg"-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/dialog_bg">

        <RelativeLayout
            android:padding="15dp"
            android:background="@drawable/dialog_title_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.rockchipme.app.custom.TextViewCustom
                android:textColor="@color/blue_text"
                android:layout_centerInParent="true"
                android:text="@string/change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp">
            </com.rockchipme.app.custom.TextViewCustom>

        </RelativeLayout>

        <View
            android:id="@+id/view_seperation_five"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            android:visibility="gone"></View>


        <LinearLayout
            android:padding="@dimen/_20sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/rl_market"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColorHint="@color/grayTextColor"
                android:theme="@style/TextLabel"
                app:errorTextAppearance="@style/error_appearance">

                <EditText
                    android:id="@+id/etOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textAlignment="viewStart"
                    android:gravity="start"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColorHint="@color/grayTextColor"
                android:theme="@style/TextLabel"
                app:errorTextAppearance="@style/error_appearance">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textAlignment="viewStart"
                    android:layout_gravity="start"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColorHint="@color/grayTextColor"
                android:theme="@style/TextLabel"
                app:errorTextAppearance="@style/error_appearance">

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textAlignment="viewStart"
                    android:layout_gravity="start"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <View
            android:id="@+id/view_seperation_six"
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@color/gray_line"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.rockchipme.app.custom.TextViewCustom
                android:id="@+id/tvCancel"
                android:gravity="center"
                android:padding="15dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_abtus"
                android:text="@string/cancel_caps"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/gray_line"></View>

            <com.rockchipme.app.custom.TextViewCustom
                android:id="@+id/tvOk"
                android:gravity="center"
                android:padding="15dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_abtus"
                android:text="@string/continue_caps"
                android:textColor="@color/white"
                android:background="@drawable/dialog_red_button_bg"
                android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>

    </ScrollView>
</LinearLayout>
