<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="12dp"
    android:paddingBottom="20dp"
    android:scrollbarStyle="outsideOverlay"
    android:background="@drawable/login_bg">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <LinearLayout
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:id="@+id/svLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="Login"
                android:textSize="25sp"
                android:layout_marginBottom="15dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:theme="@style/TextLabel"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance">

                <AutoCompleteTextView
                    android:id="@+id/atvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:padding="12dp"
                    android:textColor="@color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword"
                android:theme="@style/TextLabel"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:padding="12dp"
                    android:textColor="@color/white"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in_short"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SignUp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/accent"/>


            <!--<Button-->
            <!--android:id="@+id/email_sign_in_button"-->
            <!--style="?android:textAppearanceSmall"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:text="@string/action_sign_in"-->
            <!--android:textStyle="bold" />-->

        </LinearLayout>
    </LinearLayout>

</ScrollView>