<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_below="@id/ln_voucherCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ln_address"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle">

        <LinearLayout
            android:id="@+id/ln_no_address"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="visible">
            <!--<LinearLayout-->
            <!--android:padding="5dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="vertical"-->
            <!--android:gravity="center">-->
            <com.rockchipme.app.custom.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No address found" />

            <com.rockchipme.app.custom.TextViewCustom
                android:id="@+id/tv_basket_createAddress"
                android:paddingTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:text="create address"
                android:textColor="@color/black"/>
            <!--android:drawableLeft="@drawable/create_address_icon"-->

            <!--</LinearLayout>-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/ln_addressDetails">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:orientation="vertical">

                <com.rockchipme.app.custom.TextViewCustom
                    android:paddingTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="delivery address"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <com.rockchipme.app.custom.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:id="@+id/tvAddress"
                    android:paddingTop="4dp"
                    android:text="@string/lorem_ipsum"
                    android:scrollbars="vertical"
                    android:lineSpacingExtra="2dp"
                    android:textColor="@color/black"
                    android:paddingBottom="5dp"/>


            </LinearLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="7dp"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <LinearLayout
                    android:layout_centerVertical="true"
                    android:id="@+id/ln_change_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.rockchipme.app.custom.TextViewCustom
                        android:id="@+id/tv_basket_editAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/edit_icon"
                        android:drawablePadding="10dp"
                        android:text="@string/edit_address"
                        android:textColor="@color/black"/>

                    <com.rockchipme.app.custom.TextViewCustom
                        android:id="@+id/tv_basket_changeAddress"
                        android:paddingTop="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/create_address_icon"
                        android:drawablePadding="10dp"
                        android:text="@string/change_address"
                        android:textColor="@color/black"/>


                    <RadioGroup
                        android:id="@+id/basket_radioGroup"
                        android:layout_marginTop="10dp"
                        android:layout_below="@+id/ln_change_address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="delivey"
                            android:button="@drawable/radio_button_background"
                            android:textColor="@color/black"
                            android:paddingLeft="0dp"/>
                        <RadioButton
                            android:layout_marginLeft="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Pickup"
                            android:button="@drawable/radio_button_background"
                            android:textColor="@color/black"
                            android:paddingLeft="0dp"/>

                    </RadioGroup>
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>